# nowa

./: .clang-tidy  .gitignore  .travis.yml  README.md  configure.ac
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: ccpp.yml
doc/: nowa.1.md
src/: Makefile.am  air_quality.c  air_quality.h  air_quality_data.c  air_quality_data.h  alerts.c  alerts.cpp  alerts.h  alerts.hpp  alerts_data.c  alerts_data.h  available_products_data.c  available_products_list.c  available_products_list.h  available_products_list_data.c  available_products_list_data.h  cJSON.c  cJSON.h  conditions.c  conditions.h  conditions_data.c  conditions_data.h  forecast.c  forecast.h  forecast_data.c  forecast_data.h  json.c  json.h  license.c  license.h  nowa.c  nowa.h  points_data.c  points_data.h  product.c  product.h  product_data.c  product_data.h  station_data.c  station_data.h  (+15 more)
