bin_PROGRAMS = nowa
nowa_SOURCES = third_party/cJSON.c third_party/cJSON.h conditions.c conditions_data.c json.c license.c nowa.c station_data.c station_list.c station_list_data.c utils.c conditions.h conditions_data.h json.h license.h station_data.h station_list.h station_list_data.h utils.h

nowa_CFLAGS = -Wall -Wextra -Winvalid-pch -Wpedantic
