bin_PROGRAMS = nowa
nowa_SOURCES = third_party/cJSON.c third_party/cJSON.h conditions.c conditions_data.c json.c license.c nowa.c station_data.c station_list.c station_list_data.c utils.c conditions.h conditions_data.h json.h license.h station_data.h station_list.h station_list_data.h utils.h points_data.h points_data.c forecast.c forecast.h forecast_data.h forecast_data.c alerts.c alerts.h alerts_data.c alerts_data.h zoneinfo_data.c zoneinfo_data.h product.c product.h product_data.c product_data.h

nowa_CFLAGS = -Wall -Wextra -Winvalid-pch -Wpedantic
